# cxxsdm

./: .gitignore  CMakeLists.txt  README.md
lib/: libSDM_test.py  plotFunctions.py
src/: .tags  CMakeLists.txt  decomposition_main.cpp  spatialDecomposition.cpp  spatialDecomposition.hpp
